--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fu.prm391.sampl.finalproject_movieappclient">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FinalProject_MovieAppClient">
+        android:theme="@style/Theme.FinalProject_MovieAppClient"
+        android:usesCleartextTraffic="true"
+        >
+
         <activity
             android:name=".MoviePlayerActivity"
+            android:launchMode="singleInstance"
             android:exported="false" />
+        <service android:name=".Service.FloatingWidgetService"></service>
         <activity
             android:name=".MovieDetailActivity"
             android:exported="false" />
