--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,14 +28,11 @@
             android:name=".SignInActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".MoviePlayerActivity"
+            android:configChanges="orientation|screenSize|layoutDirection"
             android:exported="false"
             android:launchMode="singleInstance" />
 
